--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<manifest 
+<manifest
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <application 
-        android:allowBackup="true" 
-        android:icon="@mipmap/ic_launcher" 
-        android:roundIcon="@mipmap/ic_launcher" 
-        android:label="@string/app_name" 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity 
-            android:name="MainActivity" 
+        <activity
+            android:name="MainActivity"
             android:exported="true">
             <intent-filter>
-                <action 
+                <action
                     android:name="android.intent.action.MAIN" />
-                <category 
+                <category
                     android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
